--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 			}
 		],
 		"paths": {
+			"@/styles/*": ["./src/styles/*"],
 			"@/componenets/*": ["./src/componenets/*"],
 			"@/*": ["./src/*"]
 		}
