--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0-rc.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "supercluster": "^8.0.1",
+    "swr": "^2.3.3",
+    "use-supercluster": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
