--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "depremharitasi",
+  "name": "zelzeleharitasi",
+  "description": "Türkiye'deki son 500 depremi gösteren harita uygulaması.",
+  "homepage": "https://zelzeleharitasi.vercel.app",
   "version": "0.1.0",
   "private": true,
+  "contributors": [
+    {
+      "name": "Mustafa Genc",
+      "email": "eposta@mustafagenc.info",
+      "url": "https://mustafagenc.info"
+    }
+  ],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --no-cache",
+    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
@@ -50,7 +60,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
