--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.503.0",
     "next": "^15.3.1",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0-rc.2",
     "request": "^2.88.2",
+    "rtl-detect": "^1.1.2",
     "supercluster": "^8.0.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
@@ -58,6 +60,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/request": "^2.48.12",
+    "@types/rtl-detect": "^1.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
