--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
-  "i18n-ally.localesPaths": ["./messages"],
-  "i18n-ally.keystyle": "nested",
-  "i18n-ally.sourceLanguage": "tr",
-  "editor.minimap.enabled": false,
-  "editor.formatOnSave": true,
-  "editor.formatOnPaste": false,
-  "prettier.useEditorConfig": false,
-  "prettier.useTabs": false
+    "i18n-ally.localesPaths": ["./messages"],
+    "i18n-ally.keystyle": "nested",
+    "i18n-ally.sourceLanguage": "tr",
+    "editor.minimap.enabled": false,
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": false,
+    "prettier.useEditorConfig": false,
+    "prettier.useTabs": false,
+    "WillLuke.nextjs.addTypesOnSave": true,
+    "WillLuke.nextjs.hasPrompted": true
 }
