--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   ],
   "scripts": {
     "dev": "next dev --turbopack",
+    "postinstall": "prisma generate",
     "build": "next build",
+    "vercel-build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint --no-cache",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@next/third-parties": "^15.3.1",
+    "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
@@ -65,6 +69,7 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
