--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.3.1",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@prisma/extension-optimize": "^1.1.8",
+    "@prisma/instrumentation": "^6",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
@@ -69,7 +71,7 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
+    "prisma": "^6",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
