--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,20 @@
     "i18n-ally.keystyle": "nested",
     "i18n-ally.sourceLanguage": "tr",
     "editor.minimap.enabled": false,
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": false,
-    "prettier.useEditorConfig": false,
-    "prettier.useTabs": false,
     "WillLuke.nextjs.addTypesOnSave": true,
-    "WillLuke.nextjs.hasPrompted": true
+    "WillLuke.nextjs.hasPrompted": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "biomejs.biome",
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "explicit"
+    },
+    "[typescriptreact]": {
+      "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[typescript]": {
+      "editor.defaultFormatter": "biomejs.biome"
+    },
+    "files.associations": {
+      "*.mdx": "markdown"
+    }
 }
