--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "next build",
     "vercel-build": "npx prisma generate --no-engine && next build",
     "start": "next start",
-    "lint": "next lint --no-cache"
+    "lint": "next lint --no-cache",
+    "test": "jest"
   },
   "dependencies": {
     "@next/third-parties": "^15.3.1",
@@ -56,8 +57,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^29.7.0",
     "@tailwindcss/postcss": "^4",
     "@types/cheerio": "^0.22.35",
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -66,8 +69,11 @@
     "@types/rtl-detect": "^1.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "jest": "^29.7.0",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
